[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/Meteoritos/Meteorito_spawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Niveles/Advertencia.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.58208, 13 )

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )

[node name="SectorNave" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="SectorNave"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SectorNave/StaticBody2D"]
position = Vector2( 960.5, 0 )
scale = Vector2( 100, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="SectorNave"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SectorNave/StaticBody2D2"]
position = Vector2( 957.208, 1083 )
scale = Vector2( 100, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="SectorNave"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SectorNave/StaticBody2D3"]
position = Vector2( 8, 532.65 )
rotation = 1.5708
scale = Vector2( 60, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="SectorNave"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SectorNave/StaticBody2D4"]
position = Vector2( 1924, 532.65 )
rotation = 1.5708
scale = Vector2( 60, 1 )
shape = SubResource( 1 )

[node name="MeteoritoSpawn" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="MeteoritoSpawn"]
position = Vector2( 0, -458 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeteoritoSpawn/StaticBody2D"]
position = Vector2( 960.5, 0 )
scale = Vector2( 150, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="MeteoritoSpawn"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeteoritoSpawn/StaticBody2D2"]
position = Vector2( 964, 1463 )
scale = Vector2( 150, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="MeteoritoSpawn"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeteoritoSpawn/StaticBody2D3"]
position = Vector2( -453, 503.65 )
rotation = 1.5708
scale = Vector2( 100, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="MeteoritoSpawn"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeteoritoSpawn/StaticBody2D4"]
position = Vector2( 2385, 504.65 )
rotation = 1.5708
scale = Vector2( 100, 1 )
shape = SubResource( 1 )

[node name="Spawners" type="Node" parent="."]

[node name="Meteorito_spawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -203, -246 )
direccion = Vector2( 2, 1 )

[node name="Meteorito_spawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 399, -246 )
direccion = Vector2( -2, 1 )

[node name="Meteorito_spawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 975, -246 )
direccion = Vector2( 2, 1 )

[node name="Meteorito_spawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1585, -246 )
direccion = Vector2( -2, 1 )

[node name="Meteorito_spawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 2136, -246 )
direccion = Vector2( -2, 1 )

[node name="Meteorito_spawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 2136, 144 )
direccion = Vector2( -2, 1 )

[node name="Meteorito_spawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 2136, 534 )
direccion = Vector2( 2, 1 )

[node name="Meteorito_spawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -203, 1288 )
direccion = Vector2( 2, -1 )

[node name="Meteorito_spawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 399, 1288 )
direccion = Vector2( 2, -1 )

[node name="Meteorito_spawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 975, 1288 )
direccion = Vector2( 1, -1 )

[node name="Meteorito_spawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1585, 1288 )
direccion = Vector2( -2, -1 )

[node name="Meteorito_spawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 2136, 1288 )
direccion = Vector2( -2, -1 )

[node name="Meteorito_spawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 2136, 966 )
direccion = Vector2( -2, -1 )

[node name="Meteorito_spawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -203, 144 )
direccion = Vector2( 2, 1 )

[node name="Meteorito_spawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -203, 534 )
direccion = Vector2( -1, 1 )

[node name="Meteorito_spawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -203, 966 )
direccion = Vector2( 2, -1 )

[node name="SpawnerTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Advertencia" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_SpawnerTimer_timeout"]
